@@ -70,6 +70,9 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>fr.univ_amu.iut.TestIHM2021/fr.univ_amu.iut.exercice2.RectanglePerimeterCalculatorAndDrawer</mainClass>
+                    <options>
+                        <option>--enable-native-access=javafx.graphics</option>
+                    </options>
                 </configuration>
             </plugin>
         </plugins>
